package co.edu.umanizales.biblioteca_publica.enums;

public enum BookGenre {
    FICTION,
    NON_FICTION,
    SCIENCE,
    HISTORY,
    TECHNOLOGY,
    ART,
    PHILOSOPHY,
    BIOGRAPHY,
    CHILDREN,
    ACADEMIC
}
