package co.edu.umanizales.biblioteca_publica.enums;

public enum LoanStatus {
    ACTIVE,
    OVERDUE,
    COMPLETED
}

