package co.edu.umanizales.biblioteca_publica.enums;

public enum UserType {
    STUDENT,
    TEACHER,
    ADMINISTRATOR
}
