package co.edu.umanizales.biblioteca_publica.interfaces;

public interface Notificable {
    void sendNotification(String message);
    String getContact();
}
